--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,8 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+:root {
+  --navbar_shadow: 0 2px 4px rgba(0, 0, 0, 0.2),
+    0 4px 12px rgba(136, 49, 49, 0.2);
+}
