navitem_styling_navlink_hover_content

--- a/client/src/Layouts/Navbar/Components/NavItem/NavItem.module.css
+++ b/client/src/Layouts/Navbar/Components/NavItem/NavItem.module.css
@@ -1,4 +1,5 @@
 .navItem {
+  position: relative;
   display: flex;
   align-items: center;
   height: 100%;
@@ -15,4 +16,11 @@
 
 .link:hover {
   color: var(--navitem-hover);
+}
+
+/* Hover Content */
+.hoverContent {
+  position: absolute;
+  bottom: -20px;
+  left: 0;
 }
