--- a/client/src/Layouts/Navbar/Navbar.module.css
+++ b/client/src/Layouts/Navbar/Navbar.module.css
@@ -2,6 +2,6 @@
   display: flex;
   align-items: center;
   height: 72px;
-  box-shadow: var(--navbar_shadow);
+  box-shadow: var(--navbar-shadow);
   background-color: white;
 }
